experimentData/JavaFuzzer/FernFlower-detailedExperimentData/errorSamples/423/log-1-423.log
INFO:  Decompiling class Test
INFO:  ... done
INFO:  Decompiling class FuzzerUtils
INFO:  ... done

Test.java:472: error: incompatible types: possible lossy conversion from long to int
               int var10002 = var16[var23]++;
                                          ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

